# aurora

./: .gitignore  INSTALL  README.md  build.gradle  build.sh  run.sh  setup.sh  sonar-project.properties  test.sh
prj/: Doxyfile  common.cmake
prj/main/: CMakeLists.txt
prj/test/: CMakeLists.txt
res/: config.prop
src/main/base/: Controller.cpp  Controller.h  Globals.cpp  Globals.h  Mapping.h  RequestHandler.cpp  RequestHandler.h  RequestMapper.cpp  RequestMapper.h  ServerApp.cpp  ServerApp.h  main.cpp
src/main/controller/: RootController.cpp  RootController.h
src/main/java/: lombok.config
src/main/java/com/codegence/aurora/: AuroraApplication.java
src/main/java/com/codegence/aurora/config/: AWSConfig.java  DynamoDBConfig.java  GlobalErrorHandler.java  LoginConfigurer.java  MensajeDTO.java  StatusCodeException.java
src/main/java/com/codegence/aurora/game/: Faction.java  FactionScoreDTO.java  Game.java  GameController.java  GameFinishDTO.java  GameRopository.java  GameServerDTO.java  GameService.java  GameUpdateDTO.java
src/main/java/com/codegence/aurora/login/: LoginController.java
src/main/java/com/codegence/aurora/map/: Map.java  MapController.java  MapRepository.java  MapService.java
src/main/java/com/codegence/aurora/player/: GoogleProfile.java  Player.java  PlayerController.java  PlayerInDTO.java  PlayerRepository.java  PlayerService.java
src/main/model/: Constants.cpp  Constants.h
src/main/resources/: application.properties  application.yml  victoryCondition.yml
src/main/webapp/: oauthlogin.html
(+11 files in other folders)
